<resources>
    <string name="app_name">O!Market</string>
    <string name="prompt_email">Email</string>
    <string name="number_mistake">Веденный вами номер телефона не найден. Проверьте номер или зарегестрируйтесь. </string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="hello">hi Hello</string>
    <string name="splash_screen">splash_screen</string>
    <string name="log_in">Зарегистрироваться</string>
    <string name="enter">Войти</string>
    <string name="enter_number">Введите номер телефона</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">SMS c кодом отправлено на номер \n %1$s</string>
    <string name="registration">Регистрация</string>
    <string name="time_out">java.net.SocketTimeoutException: connect timed out</string>
    <string name="incorrect_number">Номер не существует</string>
    <string name="number_exists">номер уже существует в базе О!Маркет. Введите другие данные</string>
    <string name="no_connection">Нет соединение с интернетом!</string>
    <string name="terms_and_conditions">Нажимая \"Регистрация\" вы принимаете\n<a href="">условия пользовательского соглашения </a> </string>
    <string name="sample_views">sample Views</string>
    <string name="ad_type_title">Тип сделки</string>
    <string name="sell">Продажа</string>
    <string name="buy">Покупка</string>
    <string name="kgs">Сомы</string>
    <string name="us_dollars">Доллары</string>
    <string name="choose_currency">Выберите валюту</string>
    <string name="date">%s.%s.%s</string>
    <string name="terms_and_conditions_of_place_an_ad">Нажимая \"Подать объявление\", вы принимаете\n<a href="">условия пользовательского соглашения </a> </string>
    <string name="sub_category">Подкатегория</string>
    <string name="description">Описания</string>
    <string name="category">Категория</string>
    <string name="price_is_neg">Цена договорная</string>
    <string name="currency">Валюта</string>
    <string name="price">Цена</string>
    <string name="create_ad">Подать объявление</string>
    <string name="bishkek">Бишкек</string>
    <string name="location_on_the_map">Местоположение на карте</string>
    <string name="o_money_pay">Оплата через О!Деньги</string>
    <string name="o_money_agreement">Доставка товара обговаривается между покупателем и продавцом. Поступление/возврат денежных средств гарантировано сервисом «О!Деньги».</string>
    <string name="whatsapp_me">Писать мне в Whats App</string>
    <string name="write_me_in_telegram">Писать мне в Telegram</string>
    <string name="at_sign">\@</string>
    <string name="image_load_information">Для загрузки фото дайте доступ приложению Мой О! к камере в настройках телефона</string>
    <string name="main_image">Главное\n\tфото</string>
    <string name="add_icon">add_icon</string>
    <string name="create_an_ad">Подать объявление</string>
    <string name="ready_to_deliver">Я готов доставить</string>
    <string name="title">Название</string>
    <string name="activate_ad">Активировать объявление</string>
    <string name="edit_ad">Редактировать объявление</string>
    <string name="delete_ad">Удалить объявление</string>
    <string name="empty_result">error image</string>
    <string name="no_search_results">По вашему запросу ничего не найдено</string>
    <string name="recruiting">Ищу сотрудников</string>
    <string name="looking">Ищу работу</string>
    <string name="rent">Аренда</string>
    <string name="service">Услуга</string>
    <string name="hiring">Сниму</string>
</resources>