<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bottom_sheet"
    android:paddingBottom="@dimen/margin_20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cancel_icon_ad_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5dp"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ad_type_title"
        style="@style/MainSearchResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ad_type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_icon_ad_type" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/recruiting_cell_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/ad_type_title"
        app:position="TOP"
        app:setTitle="@string/recruiting" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/looking_cell_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/recruiting_cell_bottom"
        app:position="MIDDLE"
        app:setTitle="@string/looking" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/sell_cell_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/looking_cell_bottom"
        app:position="MIDDLE"
        app:setTitle="@string/sell" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/buy_cell_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/sell_cell_bottom"
        app:position="MIDDLE"
        app:setTitle="@string/buy" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/rent_cell_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/buy_cell_bottom"
        app:position="MIDDLE"
        app:setTitle="@string/rent" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/service_cell_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/rent_cell_bottom"
        app:position="MIDDLE"
        app:setTitle="@string/service" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/hiring_cell_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/service_cell_bottom"
        app:position="BOTTOM"
        app:setTitle="@string/hiring" />

</androidx.constraintlayout.widget.ConstraintLayout>