<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.new_ads.NewAdsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_faq"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_left_magenta">

        <TextView
            style="@style/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_ad" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_faq">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_bottom_8dp">

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                app:isEditableView="true"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toTopOf="parent"
                app:setDelimiter="50"
                app:setHint="@string/naming" />

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                app:isEditableView="false"
                app:layout_constraintTop_toBottomOf="@id/cus_title"
                app:setHint="@string/category" />

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_sub_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:visibility="gone"
                app:isEditableView="false"
                app:layout_constraintTop_toBottomOf="@id/cus_category"
                app:setHint="@string/sub_category" />

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:inputType="textMultiLine"
                app:isEditableView="true"
                app:layout_constraintTop_toBottomOf="@id/cus_sub_category"
                app:setDelimiter="1000"
                app:setHint="@string/description" />

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_order_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                app:isEditableView="false"
                app:layout_constraintTop_toBottomOf="@id/cus_description"
                app:setHint="@string/order_type" />

            <kg.o.internlabs.core.custom_views.cells.CustomWithToggleCellView
                android:id="@+id/cus_price_is_negotiable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/cus_order_type"
                app:setTitle="@string/price_is_neg" />

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                app:isEditableView="false"
                app:layout_constraintTop_toBottomOf="@id/cus_price_is_negotiable"
                app:setHint="@string/currency" />

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                app:isEditableView="true"
                android:inputType="numberDecimal"
                app:setDelimiter="9"
                app:layout_constraintTop_toBottomOf="@id/cus_currency"
                app:setHint="@string/price" />

            <kg.o.internlabs.core.custom_views.cells.CustomOneCellView
                android:id="@+id/cus_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/cus_price"
                app:setText="@string/bishkek" />

            <kg.o.internlabs.core.custom_views.cells.CustomWithToggleCellView
                android:id="@+id/cus_location_on_the_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:setTitle="@string/location_on_the_map"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/cus_location"/>

            <kg.o.internlabs.core.custom_views.cells.CustomWithToggleCellView
                android:id="@+id/cus_o_money_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:setTitle="@string/o_money_pay"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/cus_location_on_the_map"/>

            <TextView
                android:id="@+id/tv_o_money_pay_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@drawable/o_money_agreement_backround"
                android:textAppearance="@style/TextView.O_Money_Agreement"
                app:layout_constraintTop_toBottomOf="@id/cus_o_money_accept"
                android:layout_margin="@dimen/margin_8dp"
                android:padding="@dimen/padding_8dp"
                android:text="@string/o_money_agreement"/>

            <kg.o.internlabs.core.custom_views.cells.CustomWithToggleCellView
                android:id="@+id/cus_whats_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8dp"
                app:setTitle="@string/whatsapp_me"
                app:layout_constraintTop_toBottomOf="@id/tv_o_money_pay_agreement"/>

            <kg.o.internlabs.core.custom_views.number_input_view.custom_masked_edit_text.MaskEditText
                android:id="@+id/cus_whats_app_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:paddingHorizontal="@dimen/padding_horizontal_16dp"
                android:autofillHints="phone"
                android:minHeight="@dimen/min_height_48dp"
                android:maxLines="1"
                android:visibility="gone"
                style="@style/Container.OneCell"
                app:placeholder=""
                android:textAppearance="@style/EditableTextView"
                android:textCursorDrawable="@color/magenta_1"
                android:layout_marginBottom="@dimen/margin_bottom_8dp"
                app:masks="+### ### ### ###"
                app:layout_constraintTop_toBottomOf="@id/cus_whats_app"/>

            <kg.o.internlabs.core.custom_views.cells.CustomWithToggleCellView
                android:id="@+id/cus_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8dp"
                app:setTitle="@string/write_me_in_telegram"
                app:layout_constraintTop_toBottomOf="@id/cus_whats_app_number"/>

            <kg.o.internlabs.core.custom_views.cells.CustomTelegramCellView
                android:id="@+id/cus_telegram_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_8dp"
                app:layout_constraintTop_toBottomOf="@id/cus_telegram"/>

            <TextView
                android:id="@+id/tv_information_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/o_money_agreement_backround"
                android:textAppearance="@style/TextView.O_Money_Agreement"
                app:layout_constraintTop_toBottomOf="@id/cus_telegram_nick"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_bottom_16dp"
                android:padding="@dimen/padding_8dp"
                android:text="@string/image_load_information"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>