<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bottom_sheet"
    android:paddingBottom="@dimen/margin_20dp" >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/cancel_icon_ad_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5dp"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_currency"
        style="@style/MainSearchResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel_icon_ad_type" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/kgs_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/choose_currency"
        app:position="TOP"
        app:setTitle="@string/kgs" />

    <kg.o.internlabs.core.custom_views.cells.CustomRoundedOneCellLineView
        android:id="@+id/dollars_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/kgs_cell"
        app:position="BOTTOM"
        app:setTitle="@string/us_dollars" />


</androidx.constraintlayout.widget.ConstraintLayout>